Bug 316983 - Clicking on the color icons in the toolbar don't show color dialog
Summary: Clicking on the color icons in the toolbar don't show color dialog
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-18 16:57 UTC by David REVOY
Modified: 2013-03-30 13:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A mockup proposition : using the default Qt dialog color selector on click. (84.71 KB, image/jpeg)
2013-03-18 16:57 UTC, David REVOY
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2013-03-18 16:57:59 UTC
Created attachment 78178 [details]
A mockup proposition : using the default Qt dialog color selector on click.

Clicking on the color icons in the top toolbar don't show color dialog.
Comment 1 Halla Rempt 2013-03-30 13:06:58 UTC
Git commit 53356cb20f1100edf716beba8c407953b3c692ec by Boudewijn Rempt.
Committed on 30/03/2013 at 13:56.
Pushed by rempt into branch 'master'.

Enable the default kde color selector from the color popup button

Saves a memory as well.

M  +1    -1    krita/ui/kis_control_frame.cpp
M  +11   -9    libs/widgets/KoDualColorButton.cpp

http://commits.kde.org/calligra/53356cb20f1100edf716beba8c407953b3c692ec
Comment 2 David REVOY 2013-03-30 13:34:59 UTC
Many thanks ! 
It works perfect and this dialog add a lot of new feature to Krita : 

- no need to open 'specific color selector' for tweaking a color with precision ( ex, having a 40% grey value ) 
-  'specific color selector'  was limited to RGB ( or image channel ) + HTML Hex format , now this one have in bonus HSV
- Palette : the actual palette docker in Krita is a broken system to perform adding a simple color ( 3 modal windows to enter a single color , and the docker not refresh after adding a color,  so it's uneditable or the trick is to switch palette 2 time to refresh  ... ) , the 'custom  colors' of the default kde color selector allow to register easier new colors and save them across multiple artwork or multiple instance of Krita opened. 

So, this will have a lot of positive impact on my daily usage. Thanks.