Enable the default kde color selector from the color popup button

BUG:316983

Saves a memory as well.